# hpals

./: .gitignore  AUTHORS  CMakeLists.txt  COPYING  INSTALL  README  TODO
config/: org.hpals.als.conf  org.hpals.als.service
packaging/: PKGBUILD
src/: hpals_client.c  hpals_client.h  hpals_service.c  hpals_service.h
